climate starter started

--- a/SurfsUp/climate_starter.ipynb
+++ b/SurfsUp/climate_starter.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,13 +55,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/0d/rbyhbrpx4y35zj7thj223pwc0000gn/T/ipykernel_79930/3601434573.py:4: SADeprecationWarning: The AutomapBase.prepare.reflect parameter is deprecated and will be removed in a future release.  Reflection is enabled when AutomapBase.prepare.autoload_with is passed.\n",
+      "  Base.prepare(engine, reflect=True)\n"
+     ]
+    }
+   ],
    "source": [
     "# Declare a Base using `automap_base()`\n",
-    "\n",
-    "# Use the Base class to reflect the database tables\n"
+    "Base = automap_base()\n",
+    "# Use the Base class to reflect the database tables\n",
+    "Base.prepare(engine, reflect=True)"
    ]
   },
   {
@@ -70,37 +80,51 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['measurement', 'station']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "station\n",
+      "measurement\n"
+     ]
     }
    ],
    "source": [
-    "# Print all of the classes mapped to the Base\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Assign the measurement class to a variable called `Measurement` and\n",
-    "# the station class to a variable called `Station`\n"
+    "# Print all of the classes mapped to the Base\n",
+    "for class_name in Base.classes.keys():\n",
+    "    print(class_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Measurement class: <class 'sqlalchemy.ext.automap.measurement'>\n",
+      "Station class: <class 'sqlalchemy.ext.automap.station'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assign the measurement class to a variable called `Measurement` and\n",
+    "# the station class to a variable called `Station`\n",
+    "Measurement = Base.classes.measurement\n",
+    "Station = Base.classes.station\n",
+    "# print(f\"Measurement class: {Measurement}\")\n",
+    "# print(f\"Station class: {Station}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a session\n"
+    "# Create a session\n",
+    "session = Session(engine)"
    ]
   },
   {
